fixed issue with player not showing

--- a/geo-jot/src/Home.css
+++ b/geo-jot/src/Home.css
@@ -3,6 +3,12 @@
   
 }
 
+button.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+
 
 .left-sidebar {
   width: 300px;
